--- a/style/style.css
+++ b/style/style.css
@@ -346,6 +346,9 @@ button:hover {
   /* Extra small devices (phones, 500px and down) */
 
 @media only screen and (max-width: 500px) {
+    body{
+      overflow-x:hidden
+    }
     header {
         background-color:var(--secondary-color);
         width: 100vw;
@@ -450,6 +453,8 @@ button:hover {
             }
 
             /* Fin cards*/
+
+          
           
 
          
@@ -459,6 +464,9 @@ button:hover {
 /* Extra small devices (phones, 500px and up) */
 
 @media only screen and (min-width: 501px) {
+  body{
+    overflow-x:hidden
+  }
     header {
         background-color:var(--secondary-color);
         width: 100vw;
@@ -563,6 +571,7 @@ button:hover {
 }
 /* Extra small devices (phones, 1024) */
 @media only screen and (min-width: 1024px) { 
+
     header {
         background-color:var(--secondary-color);
         width: 100vw;
